--- a/plugins/systray/systray.desktop.in
+++ b/plugins/systray/systray.desktop.in
@@ -6,3 +6,4 @@ _Comment=Area where notification icons appear
 Icon=applications-system
 X-XFCE-Module=systray
 X-XFCE-Internal=FALSE
+X-XFCE-Unique=SCREEN
