--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -22,6 +22,7 @@ panel/panel-module-factory.c
 panel/panel-module.c
 panel/panel-plugin-external.c
 panel/panel-plugin-external-46.c
+panel/panel-plugin-external-wrapper.c
 panel/panel-preferences-dialog.c
 panel/panel-preferences-dialog.glade
 panel/panel-tic-tac-toe.c
