Add a pager mode with normal buttons.
This removes the old 'Show workspace names' option and adds a
pager with normal buttons and workspace names instead. This
looks much more like the old pager known in pre-4.0 Xfce versions.

--- a/plugins/pager/Makefile.am
+++ b/plugins/pager/Makefile.am
@@ -16,7 +16,9 @@ libpager_built_sources = \
 libpager_la_SOURCES = \
 	$(libpager_built_sources) \
 	pager.c \
-	pager.h
+	pager.h \
+	pager-buttons.h \
+	pager-buttons.c
 
 libpager_la_CFLAGS = \
 	$(GTK_CFLAGS) \
