--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -63,6 +63,7 @@ plugins/launcher/launcher-dialog.glade
 plugins/launcher/launcher.desktop.in
 
 plugins/pager/pager.c
+plugins/pager/pager-buttons.c
 plugins/pager/pager-dialog.glade
 plugins/pager/pager.desktop.in
 
