Move helpers applications to $libdir.
FHS 2.3 forbids files in $libexecdir, so move those files to $libdir.

--- a/migrate/Makefile.am
+++ b/migrate/Makefile.am
@@ -10,7 +10,7 @@ confdir = $(sysconfdir)/xdg/xfce4/panel
 conf_DATA = \
 	default.xml
 
-migratedir = $(libexecdir)/xfce4/panel
+migratedir = $(libdir)/xfce4/panel
 
 migrate_PROGRAMS = \
 	migrate
