Move module panel plugins in $libdir/xfce4/panel/plugins.
We still support the old location, but this one is nicer.

--- a/plugins/directorymenu/Makefile.am
+++ b/plugins/directorymenu/Makefile.am
@@ -4,7 +4,7 @@ INCLUDES = \
 	-DG_LOG_DOMAIN=\"libdirectorymenu\" \
 	$(PLATFORM_CPPFLAGS)
 
-plugindir = $(libdir)/xfce4/panel-plugins
+plugindir = $(libdir)/xfce4/panel/plugins
 
 plugin_LTLIBRARIES = \
 	libdirectorymenu.la
