Fix activating the panel when a plugin asks for focus.
This should fix focusing of entries in the panel like the
ones provided by the dict and verve plugins.

--- a/panel/Makefile.am
+++ b/panel/Makefile.am
@@ -61,6 +61,7 @@ xfce4_panel_CFLAGS = \
 	$(LIBXFCE4UI_CFLAGS) \
 	$(DBUS_CFLAGS) \
 	$(XFCONF_CFLAGS) \
+	$(LIBX11_CFLAGS) \
 	$(PLATFORM_CFLAGS)
 
 xfce4_panel_LDFLAGS = \
@@ -77,6 +78,7 @@ xfce4_panel_LDADD = \
 	$(LIBXFCE4UI_LIBS) \
 	$(XFCONF_LIBS) \
 	$(DBUS_LIBS) \
+	$(LIBX11_LIBS) \
 	-lm
 
 xfce4_panel_DEPENDENCIES = \
