--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "docs/manual"]
 	path = docs/manual
-	url = ssh://git.xfce.org/git/xfce/xfce4-docs
+	url = git://git.xfce.org/xfce/xfce4-docs
