Fix some string and drop Xfce in most of them.
In 4.6 we agreed to remove Xfce from most of the visible
strings, I kinda forgot about that.

--- a/panel-preferences.desktop.in
+++ b/panel-preferences.desktop.in
@@ -7,5 +7,5 @@ Categories=X-XFCE;Settings;DesktopSettings;
 OnlyShowIn=XFCE;
 Terminal=false
 StartupNotify=true
-_Name=Panel Preferences
-_Comment=Customize the Xfce Panel
+_Name=Panel
+_Comment=Customize the panel
