--- a/panel-desktop-handler.desktop.in
+++ b/panel-desktop-handler.desktop.in
@@ -1,8 +1,7 @@
 [Desktop Entry]
 Type=Application
-_Name=Create Launcher on Xfce Panel
-_Comment=Create a new launcher on the Xfce Panel
-_GenericName=Create Launcher on Xfce Panel
+_Name=Create Launcher on the panel
+_Comment=Add a new launcher to the panel based on the information of this desktop file
 Exec=xfce4-panel --add=launcher '%F'
 Icon=application-x-executable
 Terminal=false
