Add function to return the Xfconf panel name.
This will be easier to maintain then the macro if we want to
extend it in the feature. Also cache the value, since it
will not change during runtime of the panel.

--- a/migrate/Makefile.am
+++ b/migrate/Makefile.am
@@ -34,10 +34,14 @@ migrate_LDFLAGS = \
 	$(PLATFORM_LDFLAGS)
 
 migrate_LDADD = \
+	$(top_builddir)/libxfce4panel/libxfce4panel-$(LIBXFCE4PANEL_VERSION_API).la \
 	$(GTK_LIBS) \
 	$(XFCONF_LIBS) \
 	$(LIBXFCE4UTIL_LIBS) \
 	$(LIBXFCE4UI_LIBS)
+
+migrate_DEPENDENCIES = \
+	$(top_builddir)/libxfce4panel/libxfce4panel-$(LIBXFCE4PANEL_VERSION_API).la
 
 EXTRA_DIST = \
 	default.xml
