Bind panel translation domain for external plugins (bug #6932).

--- a/libxfce4panel/Makefile.am
+++ b/libxfce4panel/Makefile.am
@@ -3,6 +3,7 @@ INCLUDES = \
 	-I$(top_srcdir) \
 	-DG_LOG_DOMAIN=\"libxfce4panel\" \
 	-DLIBXFCE4PANEL_COMPILATION \
+	-DPACKAGE_LOCALE_DIR=\"$(localedir)\" \
 	$(PLATFORM_CPPFLAGS)
 
 lib_LTLIBRARIES = \
