--- a/configure.ac.in
+++ b/configure.ac.in
@@ -91,7 +91,9 @@ dnl *** Check for standard headers ***
 dnl **********************************
 AC_HEADER_STDC()
 AC_CHECK_HEADERS([stdlib.h unistd.h locale.h stdio.h errno.h time.h string.h \
-                  math.h sys/types.h sys/wait.h memory.h signal.h sys/prctl.h])
+                  math.h sys/types.h sys/wait.h memory.h signal.h sys/prctl.h \
+                  libintl.h])
+AC_CHECK_FUNCS([bind_textdomain_codeset])
 
 dnl ******************************
 dnl *** Check for i18n support ***
