Install desktop files in xfce4/plugins/actions (bug #7013).

--- a/plugins/actions/Makefile.am
+++ b/plugins/actions/Makefile.am
@@ -48,7 +48,7 @@ libactions_la_DEPENDENCIES = \
 #
 # .desktop file
 #
-desktopdir = $(datadir)/xfce4/panel-plugins
+desktopdir = $(datadir)/xfce4/panel/plugins
 desktop_in_files = actions.desktop.in
 desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
 @INTLTOOL_DESKTOP_RULE@
