--- a/plugins/clock/Makefile.am
+++ b/plugins/clock/Makefile.am
@@ -61,7 +61,7 @@ libclock_la_DEPENDENCIES = \
 #
 # .desktop file
 #
-desktopdir = $(datadir)/xfce4/panel-plugins
+desktopdir = $(datadir)/xfce4/panel/plugins
 desktop_in_files =	clock.desktop.in
 desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
 @INTLTOOL_DESKTOP_RULE@
