--- a/panel/Makefile.am
+++ b/panel/Makefile.am
@@ -4,6 +4,7 @@ INCLUDES = \
 	-DG_LOG_DOMAIN=\"xfce4-panel\" \
 	-DDATADIR=\"$(datadir)/xfce4\" \
 	-DLIBDIR=\"$(libdir)/xfce4\" \
+	-DHELPERDIR=\"$(HELPER_PATH_PREFIX)\" \
 	-DPACKAGE_LOCALE_DIR=\"$(localedir)\" \
 	-DDBUS_API_SUBJECT_TO_CHANGE \
 	$(PLATFORM_CPPFLAGS)
