Actions: Merge functionality of xfce4-session plugin.
Add support of the functionality of xfswitch and xfce4-session
plugin in a single plugin.

--- a/plugins/actions/actions.desktop.in
+++ b/plugins/actions/actions.desktop.in
@@ -4,4 +4,4 @@ _Name=Action Buttons
 _Comment=Log out, lock or other system actions
 Icon=system-log-out
 X-XFCE-Module=actions
-X-XFCE-Internal=TRUE
+X-XFCE-Internal=FALSE
