Migrate: Add version based config migration.
This allows to update the configuration for new plugins.

--- a/configure.ac.in
+++ b/configure.ac.in
@@ -10,6 +10,7 @@ dnl *** Version information ***
 dnl ***************************
 m4_define([libxfce4panel_verinfo], [3:0:0]) dnl current:revision:age
 m4_define([libxfce4panel_version_api], [1.0])
+m4_define([xfce4_panel_config_version], [1])
 m4_define([xfce4_panel_version_major], [4])
 m4_define([xfce4_panel_version_minor], [9])
 m4_define([xfce4_panel_version_micro], [0])
@@ -95,6 +96,13 @@ AC_SUBST([LIBXFCE4PANEL_VERSION_API])
 AC_SUBST([LIBXFCE4PANEL_VERSION_MAJOR])
 AC_SUBST([LIBXFCE4PANEL_VERSION_MINOR])
 AC_SUBST([LIBXFCE4PANEL_VERSION_MICRO])
+
+dnl *********************************
+dnl *** Substitute config version ***
+dnl *********************************
+XFCE4_PANEL_CONFIG_VERSION=xfce4_panel_config_version()
+AC_DEFINE([XFCE4_PANEL_CONFIG_VERSION], xfce4_panel_config_version(), [config migration version])
+AC_SUBST([XFCE4_PANEL_CONFIG_VERSION])
 
 dnl **********************************
 dnl *** Check for standard headers ***
@@ -254,6 +262,7 @@ libxfce4panel/Makefile
 libxfce4panel/libxfce4panel-1.0.pc
 libxfce4panel/libxfce4panel-config.h
 migrate/Makefile
+migrate/default.xml
 panel/Makefile
 wrapper/Makefile
 plugins/Makefile
