--- a/migrate/default.xml.in
+++ b/migrate/default.xml.in
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <channel name="xfce4-panel" version="1.0">
+  <property name="configver" type="int" value="@XFCE4_PANEL_CONFIG_VERSION@">
   <property name="panels" type="uint" value="2">
     <property name="panel-0" type="empty">
       <property name="position" type="string" value="p=6;x=0;y=0"/>
