Panel: Use long option, looks better in appfinder.

--- a/panel-preferences.desktop.in
+++ b/panel-preferences.desktop.in
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Version=1.0
-Exec=xfce4-panel -p
+Exec=xfce4-panel --preferences
 Icon=xfce4-panel
 Type=Application
 Categories=X-XFCE;Settings;DesktopSettings;
