--- a/configure.ac.in
+++ b/configure.ac.in
@@ -68,14 +68,13 @@ AM_PROG_CC_C_O()
 AC_PROG_LD()
 AC_PROG_INSTALL()
 AC_PROG_INTLTOOL()
-AC_PROG_LIBTOOL()
+AC_CHECK_PROGS([PERL], [perl5 perl])
 
 dnl **************************
 dnl *** Initialize libtool ***
 dnl **************************
-AC_DISABLE_STATIC()
-AC_PROG_LIBTOOL()
-AC_CHECK_PROGS([PERL], [perl5 perl])
+LT_PREREQ([2.2.6])
+LT_INIT([disable-static])
 
 dnl **************************************
 dnl *** Substitute version information ***
