--- a/migrate/default.xml.in
+++ b/migrate/default.xml.in
@@ -2,24 +2,26 @@
 
 <channel name="xfce4-panel" version="1.0">
   <property name="configver" type="int" value="@XFCE4_PANEL_CONFIG_VERSION@"/>
-  <property name="panels" type="uint" value="2">
-    <property name="panel-0" type="empty">
+  <property name="panels" type="array">
+    <value type="int" value="1"/>
+    <value type="int" value="2"/>
+    <property name="panel-1" type="empty">
       <property name="position" type="string" value="p=6;x=0;y=0"/>
       <property name="length" type="uint" value="100"/>
       <property name="position-locked" type="bool" value="true"/>
+      <property name="size" type="uint" value="30"/>
       <property name="plugin-ids" type="array">
         <value type="int" value="1"/>
-        <value type="int" value="2"/>
         <value type="int" value="3"/>
         <value type="int" value="15"/>
         <value type="int" value="4"/>
         <value type="int" value="5"/>
         <value type="int" value="6"/>
+        <value type="int" value="2"/>
       </property>
     </property>
-    <property name="panel-1" type="empty">
+    <property name="panel-2" type="empty">
       <property name="position" type="string" value="p=10;x=0;y=0"/>
-      <property name="size" type="uint" value="40"/>
       <property name="position-locked" type="bool" value="true"/>
       <property name="plugin-ids" type="array">
         <value type="int" value="7"/>
