--- a/panel-preferences.desktop.in
+++ b/panel-preferences.desktop.in
@@ -3,7 +3,7 @@ Version=1.0
 Exec=xfce4-panel --preferences
 Icon=xfce4-panel
 Type=Application
-Categories=X-XFCE;Settings;DesktopSettings;
+Categories=XFCE;GTK;Settings;DesktopSettings;X-XFCE-SettingsDialog;X-XFCE-PersonalSettings;
 OnlyShowIn=XFCE;
 Terminal=false
 StartupNotify=true
