Add support for pluggable dialogs.

--- a/panel-preferences.desktop.in
+++ b/panel-preferences.desktop.in
@@ -7,5 +7,8 @@ Categories=XFCE;GTK;Settings;DesktopSettings;X-XFCE-SettingsDialog;X-XFCE-Person
 OnlyShowIn=XFCE;
 Terminal=false
 StartupNotify=true
+X-XfcePluggable=true
+X-XfceHelpComponent=xfce4-panel
+X-XfceHelpPage=preferences
 _Name=Panel
 _Comment=Customize the panel
