Check for sed using a macro.

--- a/plugins/directorymenu/Makefile.am
+++ b/plugins/directorymenu/Makefile.am
@@ -56,7 +56,7 @@ bin_SCRIPTS = \
 	xfce4-popup-directorymenu
 
 xfce4-popup-directorymenu: xfce4-popup-directorymenu.sh Makefile
-	$(AM_V_GEN) sed -e "s,\@bindir\@,$(bindir),g" \
+	$(AM_V_GEN) $(SED) -e "s,\@bindir\@,$(bindir),g" \
 	-e "s,\@localedir\@,$(localedir),g" $< >$@
 
 #
