--- a/configure.ac.in
+++ b/configure.ac.in
@@ -69,6 +69,7 @@ AC_PROG_LD()
 AC_PROG_INSTALL()
 AC_PROG_INTLTOOL()
 AC_CHECK_PROGS([PERL], [perl5 perl])
+m4_ifdef([AC_PROG_SED], [AC_PROG_SED], [AC_CHECK_PROG(SED, sed, sed)])
 
 dnl **************************
 dnl *** Initialize libtool ***
