--- a/plugins/applicationsmenu/Makefile.am
+++ b/plugins/applicationsmenu/Makefile.am
@@ -54,7 +54,7 @@ bin_SCRIPTS = \
 	xfce4-popup-applicationsmenu
 
 xfce4-popup-applicationsmenu: xfce4-popup-applicationsmenu.sh Makefile
-	$(AM_V_GEN) sed -e "s,\@bindir\@,$(bindir),g" \
+	$(AM_V_GEN) $(SED) -e "s,\@bindir\@,$(bindir),g" \
 	-e "s,\@localedir\@,$(localedir),g" $< >$@
 
 #
