--- a/configure.ac.in
+++ b/configure.ac.in
@@ -39,7 +39,7 @@ AC_REVISION([xfce4_panel_version_build])
 dnl ***************************
 dnl *** Initialize automake ***
 dnl ***************************
-AM_CONFIG_HEADER([config.h])
+AC_CONFIG_HEADERS([config.h])
 AM_INIT_AUTOMAKE([1.8 no-dist-gzip dist-bzip2 tar-ustar])
 AM_MAINTAINER_MODE()
 m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
