Clock plugin: proper timezone support and refactoring.
Regression testing appreciated.

Switched to GDateTime and GTimeZone API - they do not use global
variables, so it is possible to have several clock plugins set to
different time zones.

Bonus: utf-8 support and localization.

The change required a rather deep refactoring. Added a new class
abstracting time operations, which can be accessed from either the plugin
or clock widgets. Previous design worked only because the time functions
did not need a local state (e.g. a timezone).

--- a/plugins/clock/Makefile.am
+++ b/plugins/clock/Makefile.am
@@ -16,6 +16,8 @@ libclock_la_SOURCES = \
 	$(libclock_built_sources) \
 	clock.c \
 	clock.h \
+	clock-time.c \
+	clock-time.h \
 	clock-analog.c \
 	clock-analog.h \
 	clock-binary.c \
@@ -28,6 +30,7 @@ libclock_la_SOURCES = \
 	clock-lcd.h
 
 libclock_la_CFLAGS = \
+	$(GLIB_CFLAGS) \
 	$(GTK_CFLAGS) \
 	$(LIBXFCE4UTIL_CFLAGS) \
 	$(CAIRO_CFLAGS) \
@@ -46,6 +49,7 @@ libclock_la_LDFLAGS =	 \
 libclock_la_LIBADD = \
 	$(top_builddir)/libxfce4panel/libxfce4panel-$(LIBXFCE4PANEL_VERSION_API).la \
 	$(top_builddir)/common/libpanel-common.la \
+	$(GLIB_LIBS) \
 	$(GTK_LIBS) \
 	$(CAIRO_LIBS) \
 	$(LIBXFCE4UTIL_LIBS) \
