--- a/libxfce4panel/Makefile.am
+++ b/libxfce4panel/Makefile.am
@@ -75,6 +75,51 @@ pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = libxfce4panel-$(LIBXFCE4PANEL_VERSION_API).pc
 
 #
+# GTK+ 3 support library
+#
+if ENABLE_GTK3_LIBRARY
+
+lib_LTLIBRARIES += libxfce4panel-2.0.la
+
+libxfce4panel2_includedir = \
+	$(includedir)/xfce4/libxfce4panel-2.0/libxfce4panel
+
+libxfce4panel2_include_HEADERS = \
+	$(libxfce4panel_public_built_sources) \
+	$(libxfce4panel_headers)
+
+libxfce4panel_2_0_la_SOURCES = \
+	$(libxfce4panel_built_sources) \
+	$(libxfce4panel_headers) \
+	libxfce4panel-config.c \
+	xfce-arrow-button.c \
+	xfce-panel-convenience.c \
+	xfce-panel-plugin.c \
+	xfce-panel-plugin-provider.c \
+	xfce-panel-image.c
+
+libxfce4panel_2_0_la_CFLAGS =	 \
+	$(GTK_CFLAGS) \
+	$(LIBXFCE4UTIL_CFLAGS) \
+	$(PLATFORM_CFLAGS)
+
+libxfce4panel_2_0_la_LDFLAGS = \
+	-no-undefined \
+	-export-dynamic \
+	-version-info $(LIBXFCE4PANEL_VERINFO) \
+	-export-symbols-regex '^[^_].*' \
+	$(PLATFORM_LDFLAGS)
+
+libxfce4panel_2_0_la_LIBADD = \
+	$(GTK_LIBS) \
+	$(LIBXFCE4UTIL_LIBS) \
+	-lm
+
+pkgconfig_DATA += libxfce4panel-2.0.pc
+
+endif
+
+#
 # Build sources
 #
 if MAINTAINER_MODE
