--- a/wrapper/Makefile.am
+++ b/wrapper/Makefile.am
@@ -8,12 +8,12 @@ AM_CPPFLAGS = \
 wrapperdir = $(HELPER_PATH_PREFIX)/xfce4/panel
 
 wrapper_PROGRAMS = \
-	wrapper
+	wrapper-1.0
 
 wrapper_built_sources = \
 	wrapper-dbus-client-infos.h
 
-wrapper_SOURCES = \
+wrapper_1_0_SOURCES = \
 	$(wrapper_built_sources) \
 	main.c \
 	wrapper-module.c \
@@ -21,26 +21,64 @@ wrapper_SOURCES = \
 	wrapper-plug.c \
 	wrapper-plug.h
 
-wrapper_CFLAGS = \
+wrapper_1_0_CFLAGS = \
 	$(GTK_CFLAGS) \
 	$(DBUS_CFLAGS) \
 	$(GMODULE_CFLAGS) \
 	$(LIBXFCE4UTIL_CFLAGS) \
 	$(PLATFORM_CFLAGS)
 
-wrapper_LDFLAGS = \
+wrapper_1_0_LDFLAGS = \
 	-no-undefined \
 	$(PLATFORM_LDFLAGS)
 
-wrapper_LDADD = \
+wrapper_1_0_LDADD = \
 	$(top_builddir)/libxfce4panel/libxfce4panel-$(LIBXFCE4PANEL_VERSION_API).la \
 	$(GTK_LIBS) \
 	$(DBUS_LIBS) \
 	$(GMODULE_LIBS) \
 	$(LIBXFCE4UTIL_LIBS)
 
-wrapper_DEPENDENCIES = \
+wrapper_1_0_DEPENDENCIES = \
 	$(top_builddir)/libxfce4panel/libxfce4panel-$(LIBXFCE4PANEL_VERSION_API).la
+
+#
+# Gtk+ 3 support library
+#
+if ENABLE_GTK3_LIBRARY
+
+wrapper_PROGRAMS += wrapper-2.0
+
+wrapper_2_0_SOURCES = \
+	$(wrapper_built_sources) \
+	main.c \
+	wrapper-module.c \
+	wrapper-module.h \
+	wrapper-plug.c \
+	wrapper-plug.h
+
+wrapper_2_0_CFLAGS = \
+	$(GTK3_CFLAGS) \
+	$(DBUS_CFLAGS) \
+	$(GMODULE_CFLAGS) \
+	$(LIBXFCE4UTIL_CFLAGS) \
+	$(PLATFORM_CFLAGS)
+
+wrapper_2_0_LDFLAGS = \
+	-no-undefined \
+	$(PLATFORM_LDFLAGS)
+
+wrapper_2_0_LDADD = \
+	$(top_builddir)/libxfce4panel/libxfce4panel-2.0.la \
+	$(GTK3_LIBS) \
+	$(DBUS_LIBS) \
+	$(GMODULE_LIBS) \
+	$(LIBXFCE4UTIL_LIBS)
+
+wrapper_2_0_DEPENDENCIES = \
+	$(top_builddir)/libxfce4panel/libxfce4panel-2.0.la
+
+endif
 
 if MAINTAINER_MODE
 
