--- a/plugins/actions/actions.desktop.in.in
+++ b/plugins/actions/actions.desktop.in.in
@@ -5,3 +5,4 @@ _Comment=Log out, lock or other system actions
 Icon=system-log-out
 X-XFCE-Module=actions
 X-XFCE-Internal=FALSE
+X-XFCE-API=@LIBXFCE4PANEL_VERSION_API@
