--- a/plugins/applicationsmenu/applicationsmenu.desktop.in.in
+++ b/plugins/applicationsmenu/applicationsmenu.desktop.in.in
@@ -5,3 +5,4 @@ _Comment=Show a menu containing categories of installed applications
 Icon=xfce4-panel-menu
 X-XFCE-Module=applicationsmenu
 X-XFCE-Internal=TRUE
+X-XFCE-API=@LIBXFCE4PANEL_VERSION_API@
