--- a/plugins/directorymenu/directorymenu.desktop.in.in
+++ b/plugins/directorymenu/directorymenu.desktop.in.in
@@ -5,3 +5,4 @@ _Comment=Show a directory tree in a menu
 Icon=folder
 X-XFCE-Module=directorymenu
 X-XFCE-Internal=TRUE
+X-XFCE-API=@LIBXFCE4PANEL_VERSION_API@
