--- a/plugins/launcher/launcher.desktop.in.in
+++ b/plugins/launcher/launcher.desktop.in.in
@@ -5,3 +5,4 @@ _Comment=Program launcher with optional menu
 Icon=application-x-executable
 X-XFCE-Module=launcher
 X-XFCE-Internal=TRUE
+X-XFCE-API=@LIBXFCE4PANEL_VERSION_API@
