--- a/plugins/pager/pager.desktop.in.in
+++ b/plugins/pager/pager.desktop.in.in
@@ -5,3 +5,4 @@ _Comment=Switch between virtual desktops
 Icon=xfce4-workspaces
 X-XFCE-Module=pager
 X-XFCE-Internal=TRUE
+X-XFCE-API=@LIBXFCE4PANEL_VERSION_API@
