--- a/plugins/separator/separator.desktop.in.in
+++ b/plugins/separator/separator.desktop.in.in
@@ -5,3 +5,4 @@ _Comment=Adds a separator or space between panel items
 Icon=gtk-remove
 X-XFCE-Module=separator
 X-XFCE-Internal=TRUE
+X-XFCE-API=@LIBXFCE4PANEL_VERSION_API@
