--- a/plugins/tasklist/tasklist.desktop.in.in
+++ b/plugins/tasklist/tasklist.desktop.in.in
@@ -5,3 +5,4 @@ _Comment=Switch between open windows using buttons
 Icon=preferences-system-windows
 X-XFCE-Module=tasklist
 X-XFCE-Internal=TRUE
+X-XFCE-API=@LIBXFCE4PANEL_VERSION_API@
