--- a/libxfce4panel/libxfce4panel-2.0.pc.in
+++ b/libxfce4panel/libxfce4panel-2.0.pc.in
@@ -3,6 +3,7 @@ exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
 localedir=@localedir@
+api=@LIBXFCE4PANEL_VERSION_API@
 
 Name: libxfce4panel
 Description: Library for the Xfce Panel
