--- a/plugins/showdesktop/showdesktop.desktop.in.in
+++ b/plugins/showdesktop/showdesktop.desktop.in.in
@@ -5,3 +5,4 @@ _Comment=Hide all windows and show the desktop
 Icon=user-desktop
 X-XFCE-Module=showdesktop
 X-XFCE-Internal=TRUE
+X-XFCE-API=@LIBXFCE4PANEL_VERSION_API@
