--- a/plugins/windowmenu/windowmenu.desktop.in.in
+++ b/plugins/windowmenu/windowmenu.desktop.in.in
@@ -5,3 +5,4 @@ _Comment=Switch between open windows using a menu
 Icon=preferences-system-windows
 X-XFCE-Module=windowmenu
 X-XFCE-Internal=TRUE
+X-XFCE-API=@LIBXFCE4PANEL_VERSION_API@
