--- a/panel/Makefile.am
+++ b/panel/Makefile.am
@@ -2,6 +2,7 @@
 AM_CPPFLAGS = \
 	-I$(top_srcdir) \
 	-DG_LOG_DOMAIN=\"xfce4-panel\" \
+	-DWNCK_I_KNOW_THIS_IS_UNSTABLE \
 	-DDATADIR=\"$(datadir)/xfce4\" \
 	-DLIBDIR=\"$(libdir)/xfce4\" \
 	-DHELPERDIR=\"$(HELPER_PATH_PREFIX)/xfce4/panel\" \
@@ -60,6 +61,7 @@ xfce4_panel_CFLAGS = \
 	$(EXO_CFLAGS) \
 	$(LIBXFCE4UTIL_CFLAGS) \
 	$(LIBXFCE4UI_CFLAGS) \
+	$(LIBWNCK_CFLAGS) \
 	$(DBUS_CFLAGS) \
 	$(XFCONF_CFLAGS) \
 	$(LIBX11_CFLAGS) \
@@ -77,6 +79,7 @@ xfce4_panel_LDADD = \
 	$(GMODULE_LIBS) \
 	$(LIBXFCE4UTIL_LIBS) \
 	$(LIBXFCE4UI_LIBS) \
+	$(LIBWNCK_LIBS) \
 	$(XFCONF_LIBS) \
 	$(DBUS_LIBS) \
 	$(LIBX11_LIBS) \
